Use first part of intro section as welcome text

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <div class="container">
 
   <header>
+    <div>
+<h3>Welcome / <a href="index_de.html">Willkommen</a></h3>
+<p>Hi, I'm frau lyoner.<br/>I make ideas come alive.</p>
+</div>
     <img alt="" src="img/logo/profile_small.JPG" class="logo logo--profile"/>
     <img alt="frau lyoner" src="img/logo/logo.png" class="logo logo--lettering"/>
   </header>
 
   <section>
-<h3>That's me / <a href="index_de.html">Hi, ich bin's</a></h3>
-
-<p>Hi, I'm frau lyoner. I make ideas come alive.</p>
-
 <p>
   I'm one of these
   <a target="_blank"
