--- a/index_de.html
+++ b/index_de.html
@@ -13,15 +13,15 @@
 <div class="container">
 
   <header>
+    <div>
+<h3>Willkommen / <a href="index.html">Welcome</a></h3>
+<p>Hi, ich bin Frau Lyoner.<br/>Ich erwecke Ideen zum Leben.</p>
+</div>
     <img alt="" src="img/logo/profile_small.JPG" class="logo logo--profile"/>
     <img alt="frau lyoner" src="img/logo/logo.png" class="logo logo--lettering"/>
   </header>
 
   <section>
-<h3>Hi, ich bin's / <a href="index.html">That's me</a></h3>
-
-<p>Hi, ich bin Frau Lyoner. Ich erwecke Ideen zum Leben.</p>
-
 <p>
   Ich geh&ouml;re zur Spezies der
   <a target="_blank"
