--- a/sources/index.html
+++ b/sources/index.html
@@ -1,8 +1,9 @@
+<!-- build:welcome -->
+<h3>Welcome / <a href="index_de.html">Willkommen</a></h3>
+<p>Hi, I'm frau lyoner.<br/>I make ideas come alive.</p>
+<!-- /build:welcome -->
+
 <!-- build:intro -->
-<h3>That's me / <a href="index_de.html">Hi, ich bin's</a></h3>
-
-<p>Hi, I'm frau lyoner. I make ideas come alive.</p>
-
 <p>
   I'm one of these
   <a target="_blank"
