--- a/sources/index_de.html
+++ b/sources/index_de.html
@@ -1,8 +1,9 @@
+<!-- build:welcome -->
+<h3>Willkommen / <a href="index.html">Welcome</a></h3>
+<p>Hi, ich bin Frau Lyoner.<br/>Ich erwecke Ideen zum Leben.</p>
+<!-- /build:welcome -->
+
 <!-- build:intro -->
-<h3>Hi, ich bin's / <a href="index.html">That's me</a></h3>
-
-<p>Hi, ich bin Frau Lyoner. Ich erwecke Ideen zum Leben.</p>
-
 <p>
   Ich geh&ouml;re zur Spezies der
   <a target="_blank"
