--- a/sources/template.html
+++ b/sources/template.html
@@ -13,6 +13,7 @@
 <div class="container">
 
   <header>
+    <div><!-- build:welcome --></div>
     <img alt="" src="img/logo/profile_small.JPG" class="logo logo--profile"/>
     <img alt="frau lyoner" src="img/logo/logo.png" class="logo logo--lettering"/>
   </header>
