--- a/index_de.html
+++ b/index_de.html
@@ -48,9 +48,8 @@
 <p>
   Ich bin relativ aktiv auf GitHub unterwegs, insbesondere bei der Entwicklung eines
   <a target="_blank" href="https://github.com/synyx/urlaubsverwaltung" title="synyx Urlaubsverwaltung">
-    Urlaubsverwaltung Tools</a>,
-  das urspr&uuml;nglich als &quot;Ich lerne Java&quot; Ausbildungsprojekt begann und sp&auml;ter Open Source
-  wurde.
+    Urlaubsverwaltung Tools</a> und bei
+  <a target="_blank" href="http://where2dump.com">where2dump</a>.
 </p>
 
 <p class="contact">
