--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </p>
 </section>
 
-  <footer>&copy; Aljona Buchloh 2017</footer>
+  <footer>&copy; fraulyoner - Aljona Buchloh 2017</footer>
 
 </div>
 
