--- a/index_de.html
+++ b/index_de.html
@@ -109,7 +109,7 @@
 </p>
 </section>
 
-  <footer>&copy; Aljona Buchloh 2017</footer>
+  <footer>&copy; fraulyoner - Aljona Buchloh 2017</footer>
 
 </div>
 
