--- a/sources/template.html
+++ b/sources/template.html
@@ -23,7 +23,7 @@
   <section><!-- build:lettering --></section>
   <section><!-- build:more --></section>
 
-  <footer>&copy; Aljona Buchloh 2017</footer>
+  <footer>&copy; fraulyoner - Aljona Buchloh 2017</footer>
 
 </div>
 
