--- a/_posts/2017-12-12-Hello-World.html
+++ b/_posts/2017-12-12-Hello-World.html
@@ -1,11 +1,22 @@
 ---
 layout: post
-title: You're up and running!
+title: Dies ist der erste Test Blog Post
+excerpt_separator: <!--more-->
 ---
 
 <section>
-  <p>This is the first post!</p>
+  <p>Ui, die Frau Lyoner bloggt jetzt über Dinge und Sachen.</p>
   <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
     eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
     voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+  <!--more-->
+  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+    eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+    voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+    clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+    amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+    nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed
+    diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+    clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+    amet.</p>
 </section>
