--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: en
 ---
 
 <section>
+  <p>Hi, I'm Frau Lyoner.</p>
+
   <p>
     I'm one of these
     <a target="_blank"
@@ -26,6 +28,8 @@ layout: en
       Germany</a>.
     There I'm also known as Aljona Buchloh (nee Murygina).
   </p>
+
+  <img src="img/summary.png" alt="That's me!"/>
 </section>
 
 <section>
@@ -54,8 +58,6 @@ layout: en
 
 <section>
   <h2>With pen and paper</h2>
-
-  <img src="img/lettering/lettering_collage_small.jpg" alt="Lettering is fun!"/>
 
   <p>
     Sometimes I leave the digital world and enjoy being creative in an analog
