--- a/index_de.html
+++ b/index_de.html
@@ -3,6 +3,8 @@ layout: de
 ---
 
 <section>
+  <p>Hi, ich bin Frau Lyoner.</p>
+
   <p>
     Ich geh&ouml;re zur Spezies der
     <a target="_blank" href="{{ site.links.magic }}"> modernen Zauberer</a>,
@@ -28,6 +30,8 @@ layout: de
     aus. Dort bin ich auch bekannt unter dem Namen Aljona Buchloh (geb.
     Murygina).
   </p>
+
+  <img src="img/summary.png" alt="That's me!"/>
 </section>
 
 <section>
@@ -59,8 +63,6 @@ layout: de
 
 <section>
   <h2>Mit Stift und Papier</h2>
-
-  <img src="img/lettering/lettering_collage_small.jpg" alt="Lettering is fun!"/>
 
   <p>
     Nicht nur in der digitalen, auch in der analogen Welt bin ich gerne kreativ
