Add section about blog

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: en
 </section>
 
 <section>
-  <h2>On the keyboard</h2>
+  <h2>Hacking</h2>
 
   <p>
     I'm quite active on GitHub, especially on the
@@ -57,7 +57,29 @@ layout: en
 </section>
 
 <section>
-  <h2>With pen and paper</h2>
+  <h2>Blogging</h2>
+
+  <p>
+    On <a target="_blank" href="{{ site.links.blog }}">meinimalismus.de</a>
+    I write about my way to a minimalist life.
+  </p>
+
+  <p class="contact">
+    <a class="contact--icon" target="_blank"
+       href="{{ site.user.github }}"
+       title="GitHub">
+      <i class="fa fa-2x fa-external-link-square"></i>
+    </a>
+    <span class="contact--description">
+    Visit my
+    <a target="_blank" href="{{ site.links.blog }}"
+       title="Blog">blog</a> to find out more.
+  </span>
+  </p>
+</section>
+
+<section>
+  <h2>Lettering</h2>
 
   <p>
     Sometimes I leave the digital world and enjoy being creative in an analog
