--- a/index_de.html
+++ b/index_de.html
@@ -35,7 +35,7 @@ layout: de
 </section>
 
 <section>
-  <h2>An der Tastatur</h2>
+  <h2>Hacking</h2>
 
   <p>
     Ich bin relativ aktiv auf GitHub unterwegs, insbesondere bei der Entwicklung
@@ -62,7 +62,30 @@ layout: de
 </section>
 
 <section>
-  <h2>Mit Stift und Papier</h2>
+  <h2>Blogging</h2>
+
+  <p>
+    Auf <a target="_blank" href="{{ site.links.blog }}">meinimalismus.de</a>
+    blogge ich über meinen ganz persönlichen Weg zu einem minimalistischen
+    Leben.
+  </p>
+
+  <p class="contact">
+    <a class="contact--icon" target="_blank"
+       href="{{ site.user.github }}"
+       title="GitHub">
+      <i class="fa fa-2x fa-external-link-square"></i>
+    </a>
+    <span class="contact--description">
+    Schau auf meinem
+    <a target="_blank" href="{{ site.links.blog }}"
+       title="Blog">Blog</a> vorbei, um mehr zu erfahren.
+  </span>
+  </p>
+</section>
+
+<section>
+  <h2>Lettering</h2>
 
   <p>
     Nicht nur in der digitalen, auch in der analogen Welt bin ich gerne kreativ
