Adjust size and position of images

--- a/index_de.html
+++ b/index_de.html
@@ -30,8 +30,6 @@ layout: de
     aus. Dort bin ich auch bekannt unter dem Namen Aljona Buchloh (geb.
     Murygina).
   </p>
-
-  <img src="img/summary.png" alt="That's me!"/>
 </section>
 
 <section>
@@ -134,4 +132,6 @@ layout: de
     schreiben.
   </span>
   </p>
+
+  <img src="img/summary.png" class="profile" alt="Das bin ich!"/>
 </section>
