--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@ layout: en
       Germany</a>.
     There I'm also known as Aljona Buchloh (nee Murygina).
   </p>
-
-  <img src="img/summary.png" alt="That's me!"/>
 </section>
 
 <section>
@@ -127,4 +125,6 @@ layout: en
     <a target="_blank" href="mailto:{{  site.user.email  }}" title="email">email</a>.
   </span>
   </p>
+
+  <img src="img/summary.png" class="profile" alt="That's me!"/>
 </section>
