--- a/index.html
+++ b/index.html
@@ -6,27 +6,10 @@ layout: en
   <p>Hi, I'm Frau Lyoner.</p>
 
   <p>
-    I'm one of these
-    <a target="_blank"
-       href="{{ site.links.magic }}">
-      modern-day wizards</a> that make amazing things happen with the magic of
-    coding.
-    My magical abilities were discovered in the year 2011, since then I spent a
-    lot of time on learning and refining
-    my powers. Java is only one of my various magic spells that I use for
-    breathing life into things.
-    I love to create usable web applications that bring joy and happiness to
-    people by solving their problems.
-  </p>
-
-  <p>
-    I live out my passion for beautiful projects and clean code in my job at the
-    wonderful company
-    <a target="_blank" href="{{ site.links.company }}">synyx</a> in
-    <a target="_blank"
-       href="{{ site.links.location }}">Karlsruhe,
-      Germany</a>.
-    There I'm also known as Aljona Buchloh (nee Murygina).
+    This is a pseudonym based on my first name reminding of the sausage
+    "Lyoner". Actually, my name is Aljona Buchloh (nee Murygina).<br/>
+    Together with my husband and daughter, I live in
+    <a target="_blank" href="{{ site.links.location }}">Karlsruhe, Germany</a>.
   </p>
 </section>
 
@@ -34,7 +17,7 @@ layout: en
   <h2>Hacking</h2>
 
   <p>
-    I'm quite active on GitHub, especially on the
+    Now and then I leave my mark on GitHub, especially on the
     <a target="_blank" href="{{ site.links.uv }}"
        title="synyx Urlaubsverwaltung">vacation
       management tool</a> and on
