--- a/index_de.html
+++ b/index_de.html
@@ -4,31 +4,12 @@ layout: de
 
 <section>
   <p>Hi, ich bin Frau Lyoner.</p>
-
   <p>
-    Ich geh&ouml;re zur Spezies der
-    <a target="_blank" href="{{ site.links.magic }}"> modernen Zauberer</a>,
-    die durch die Magie des Programmierens erstaunliche Dinge vollbringen.
-    Meine magischen F&auml;higkeiten habe ich im Jahre 2011 entdeckt, seither
-    verbringe ich eine Menge Zeit damit,
-    meine Kr&auml;fte zu erweitern.
-    Java ist nur einer meiner vielf&auml;ltigen Zauberspr&uuml;che, die ich
-    benutze, um Dingen Leben
-    einzuhauchen.
-    Ich liebe es, gut benutzbare Web Anwendungen zu erschaffen, die Menschen
-    Freude bereiten, indem sie ihnen bei der
-    Bew&auml;ltigung allt&auml;glicher Probleme helfen.
-  </p>
-
-  <p>
-    Meine Leidenschaft f&uuml;r sch&ouml;ne Projekte und sauberen Code lebe ich
-    in
-    meinem Job bei der wundervollen
-    Firma <a target="_blank" href="{{ site.links.company }}">synyx</a> in
-    <a target="_blank"
-       href="{{ site.links.location }}">Karlsruhe</a>
-    aus. Dort bin ich auch bekannt unter dem Namen Aljona Buchloh (geb.
-    Murygina).
+    Eigentlich h&ouml;re ich auf den Namen Aljona Buchloh (geb. Murygina), doch die
+    &Auml;hnlichkeit meines Vornamens zu einer gewissen Wurstsorte hat mir dieses
+    ungew&ouml;hnliche Pseudonym eingebracht.<br/>
+    Zusammen mit Ehemann und Tochter lebe ich im sch&ouml;nen
+    <a target="_blank" href="{{ site.links.location }}">Karlsruhe</a>.
   </p>
 </section>
 
@@ -36,8 +17,8 @@ layout: de
   <h2>Hacking</h2>
 
   <p>
-    Ich bin relativ aktiv auf GitHub unterwegs, insbesondere bei der Entwicklung
-    eines
+    Immer wieder hinterlasse ich Spuren auf GitHub, insbesondere bei der
+    Entwicklung eines
     <a target="_blank" href="{{ site.links.uv }}"
        title="synyx Urlaubsverwaltung">
       Urlaubsverwaltung Tools</a> und bei
