Replace lettering logo by avatar image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: en
 ---
 
 <section>
-  <p>Hi, I'm Frau Lyoner.</p>
+  <h2 class="center">Hi, I'm Frau Lyoner.</h2>
 
   <p>
     This is a pseudonym based on my first name reminding of the sausage
