--- a/index_de.html
+++ b/index_de.html
@@ -3,7 +3,7 @@ layout: de
 ---
 
 <section>
-  <p>Hi, ich bin Frau Lyoner.</p>
+  <h2 class="center">Hi, ich bin Frau Lyoner.</h2>
   <p>
     Eigentlich h&ouml;re ich auf den Namen Aljona Buchloh (geb. Murygina), doch die
     &Auml;hnlichkeit meines Vornamens zu einer gewissen Wurstsorte hat mir dieses
