Use button styling for contact links

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ layout: en
 ---
 
 <section>
-  <h2 class="center">Hi, I'm Frau Lyoner.</h2>
+  <h1 class="center">Hi, I'm Frau Lyoner</h1>
 
   <p>
     This is a pseudonym based on my first name reminding of the sausage
-    "Lyoner". Actually, my name is Aljona Buchloh (nee Murygina).<br/>
+    "Lyoner". Actually my name is Aljona Buchloh, nee Murygina.
     Together with my husband and daughter, I live in
     <a target="_blank" href="{{ site.links.location }}">Karlsruhe, Germany</a>.
   </p>
@@ -22,18 +22,10 @@ layout: en
        title="synyx Urlaubsverwaltung">vacation
       management tool</a> and on
     <a target="_blank" href="{{ site.links.where2dump }}">where2dump</a>.
-  </p>
-
-  <p class="contact">
-    <a class="contact--icon" target="_blank"
-       href="{{ site.user.github }}" title="GitHub">
-      <i class="fa fa-2x fa-github-square"></i>
+    Are you interested in my coding projects?
+    <a class="button" target="_blank" href="{{ site.user.github }}">
+      <i class="fa fa-lg fa-fw fa-github-alt"></i> Check out my GitHub page
     </a>
-    <span class="contact--description">
-    Check out my <a target="_blank" href="{{ site.user.github }}"
-                    title="GitHub page">GitHub page</a>
-    to see the projects I contribute to.
-  </span>
   </p>
 </section>
 
@@ -43,19 +35,11 @@ layout: en
   <p>
     On <a target="_blank" href="{{ site.links.blog }}">meinimalismus.de</a>
     I write about my way to a minimalist life.
-  </p>
-
-  <p class="contact">
-    <a class="contact--icon" target="_blank"
-       href="{{ site.user.github }}"
-       title="GitHub">
-      <i class="fa fa-2x fa-external-link-square"></i>
+    Do you want to find out more about the subjects minimalism, tidiness and
+    sustainability?
+    <a class="button" target="_blank" href="{{ site.links.blog }}">
+      <i class="fa fa-lg fa-fw fa-pencil"></i> Visit my blog
     </a>
-    <span class="contact--description">
-    Visit my
-    <a target="_blank" href="{{ site.links.blog }}"
-       title="Blog">blog</a> to find out more.
-  </span>
   </p>
 </section>
 
@@ -67,45 +51,23 @@ layout: en
     way.
     Since 2015 I'm highly infected with the
     <a target="_blank"
-       href="{{ site.links.lettering }}">Lettering</a>
-    virus.
-  </p>
-
-  <p class="contact">
-    <a class="contact--icon" target="_blank"
-       href="{{ site.user.instagram }}" title="Instagram">
-      <i class="fa fa-2x fa-instagram"></i>
+       href="{{ site.links.lettering }}">Lettering</a> virus.
+    Are you interested in my non-coding projects?
+    <a class="button" target="_blank" href="{{ site.user.instagram }}">
+      <i class="fa fa-lg fa-fw fa-instagram"></i> Follow me on Instagram
     </a>
-    <span class="contact--description">
-    Follow me on <a target="_blank"
-                    href="{{ site.user.instagram }}">Instagram</a> if you are
-    interested in my non-coding projects.
-  </span>
   </p>
 </section>
 
 <section>
   <h2>More?</h2>
 
-  <p class="contact">
-    <a class="contact--icon" target="_blank"
-       href="{{ site.user.twitter }}" title="Twitter">
-      <i class="fa fa-2x fa-twitter-square"></i>
+  <p>
+    <a class="button" target="_blank" href="{{ site.user.twitter }}">
+      <i class="fa fa-lg fa-fw fa-twitter"></i> Follow me on Twitter
     </a>
-    <span class="contact--description">
-    You can follow me on <a target="_blank"
-                            href="{{ site.user.twitter }}">Twitter</a>.
-  </span>
-  </p>
-
-  <p class="contact">
-    <a class="contact--icon" target="_blank"
-       href="mailto:{{ site.user.email }}" title="email">
-      <i class="fa fa-2x fa-envelope-square"></i>
+    <a class="button" href="mailto:{{ site.user.email }}">
+      <i class="fa fa-fw fa-envelope"></i> Drop me an email
     </a>
-    <span class="contact--description">
-    ... or drop me an
-    <a target="_blank" href="mailto:{{  site.user.email  }}" title="email">email</a>.
-  </span>
   </p>
 </section>
