--- a/index_de.html
+++ b/index_de.html
@@ -3,11 +3,11 @@ layout: de
 ---
 
 <section>
-  <h2 class="center">Hi, ich bin Frau Lyoner.</h2>
+  <h1 class="center">Hi, ich bin Frau Lyoner.</h1>
   <p>
     Eigentlich h&ouml;re ich auf den Namen Aljona Buchloh (geb. Murygina), doch die
     &Auml;hnlichkeit meines Vornamens zu einer gewissen Wurstsorte hat mir dieses
-    ungew&ouml;hnliche Pseudonym eingebracht.<br/>
+    ungew&ouml;hnliche Pseudonym eingebracht.
     Zusammen mit Ehemann und Tochter lebe ich im sch&ouml;nen
     <a target="_blank" href="{{ site.links.location }}">Karlsruhe</a>.
   </p>
@@ -23,20 +23,10 @@ layout: de
        title="synyx Urlaubsverwaltung">
       Urlaubsverwaltung Tools</a> und bei
     <a target="_blank" href="{{ site.links.where2dump }}">where2dump</a>.
-  </p>
-
-  <p class="contact">
-    <a class="contact--icon" target="_blank"
-       href="{{ site.user.github }}"
-       title="GitHub">
-      <i class="fa fa-2x fa-github-square"></i>
+    Interessiert an meinen digitalen Projekten?
+    <a class="button" target="_blank" href="{{ site.user.github }}">
+      <i class="fa fa-lg fa-fw fa-github-alt"></i> Besuche meine GitHub Seite
     </a>
-    <span class="contact--description">
-    Schau auf meiner
-    <a target="_blank" href="{{ site.user.github }}"
-       title="GitHub Seite">GitHub Seite</a> vorbei,
-    um mehr zu erfahren.
-  </span>
   </p>
 </section>
 
@@ -45,21 +35,12 @@ layout: de
 
   <p>
     Auf <a target="_blank" href="{{ site.links.blog }}">meinimalismus.de</a>
-    blogge ich über meinen ganz persönlichen Weg zu einem minimalistischen
-    Leben.
-  </p>
-
-  <p class="contact">
-    <a class="contact--icon" target="_blank"
-       href="{{ site.user.github }}"
-       title="GitHub">
-      <i class="fa fa-2x fa-external-link-square"></i>
+    blogge ich &uuml;ber meinen ganz pers&ouml;nlichen Weg zu einem minimalistischen Leben.
+    Hier berichte ich von meinen Strategien und Erfahrungen im Kampf gegen
+    Gedankenchaos und Unordnung. Willst du mehr dar&uuml;ber erfahren?
+    <a class="button" target="_blank" href="{{ site.links.blog }}">
+      <i class="fa fa-lg fa-fw fa-pencil"></i> Besuche meinen Blog
     </a>
-    <span class="contact--description">
-    Schau auf meinem
-    <a target="_blank" href="{{ site.links.blog }}"
-       title="Blog">Blog</a> vorbei, um mehr zu erfahren.
-  </span>
   </p>
 </section>
 
@@ -67,50 +48,27 @@ layout: de
   <h2>Lettering</h2>
 
   <p>
-    Nicht nur in der digitalen, auch in der analogen Welt bin ich gerne kreativ
-    unterwegs.
+    Nicht nur in der digitalen, auch in der analogen Welt bin ich gerne
+    sch&ouml;pferisch unterwegs.
     Ende 2015 habe ich mich mit dem hochgradig ansteckenden
     <a target="_blank" href="{{ site.links.lettering }}">Lettering</a>
     Virus infiziert und bin seither auch auf Instagram zu finden.
-  </p>
-
-  <p class="contact">
-    <a class="contact--icon" target="_blank"
-       href="{{ site.user.instagram }}" title="Instagram">
-      <i class="fa fa-2x fa-instagram"></i>
+    Interessiert an meinen analogen Projekten?
+    <a class="button" target="_blank" href="{{ site.user.instagram }}">
+      <i class="fa fa-lg fa-fw fa-instagram"></i> Folge mir auf Instagram
     </a>
-    <span class="contact--description">
-    Folge mir auf <a target="_blank"
-                     href="{{ site.user.instagram }}">Instagram</a>,
-    wenn dich meine analogen Projekte interessieren.
-  </span>
   </p>
 </section>
 
 <section>
-  <h2>Mehr?</h2>
+  <h2>Und sonst so?</h2>
 
-  <p class="contact">
-    <a class="contact--icon" target="_blank"
-       href="{{ site.user.twitter }}"
-       title="Twitter">
-      <i class="fa fa-2x fa-twitter-square"></i>
+  <p>
+    <a class="button" target="_blank" href="{{ site.user.twitter }}">
+      <i class="fa fa-lg fa-fw fa-twitter"></i> Folge mir auf Twitter
     </a>
-    <span class="contact--description">
-    Du kannst mir auf
-      <a target="_blank" href="{{ site.user.twitter }}">Twitter</a> folgen.
-  </span>
-  </p>
-
-  <p class="contact">
-    <a class="contact--icon" target="_blank"
-       href="mailto:{{ site.user.email }}" title="E-Mail">
-      <i class="fa fa-2x fa-envelope-square"></i>
+    <a class="button" href="mailto:{{ site.user.email }}">
+      <i class="fa fa-fw fa-envelope"></i> Schreib mir eine E-Mail
     </a>
-    <span class="contact--description">
-    ...oder mir eine <a target="_blank"
-                        href="mailto:{{ site.user.email }}">E-Mail</a>
-    schreiben.
-  </span>
   </p>
 </section>
