Adjust impressum layout

--- a/impressum.html
+++ b/impressum.html
@@ -2,7 +2,11 @@
 layout: default
 ---
 
-<h1>Impressum</h1>
+<h1 class="center">Impressum</h1>
+
+<a class="button" href="index_de.html">
+  <i class="fa fa-lg fa-fw fa-home"></i> Zur&uuml;ck zur Startseite
+</a>
 
 <h2>Angaben gemäß § 5 TMG</h2>
 <p>
@@ -12,7 +16,7 @@ layout: default
 </p>
 
 <h2>Kontakt</h2>
-<p>E-Mail: aljona.buchloh@gmail.com</p>
+<p>E-Mail: {{ site.user.email }}</p>
 
 <h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h2>
 <p>
@@ -21,4 +25,6 @@ layout: default
   76135 Karlsruhe
 </p>
 
-<a href="index_de.html">Zurück zur Startseite</a>
+<a class="button" href="index_de.html">
+  <i class="fa fa-lg fa-fw fa-home"></i> Zur&uuml;ck zur Startseite
+</a>
