Add mail button to top of page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@ layout: default
     "Lyoner". Actually my name is Aljona Buchloh, nee Murygina.
     Together with my husband and daughter, I live in
     <a target="_blank" href="{{ site.links.location }}">Karlsruhe, Germany</a>.
+    <a class="button" href="mailto:{{ site.user.email }}">
+      <i class="fa fa-fw fa-envelope"></i> Drop me an email
+    </a>
   </p>
 </section>
 
@@ -18,9 +21,8 @@ layout: default
 
   <p>
     Now and then I leave my mark on GitHub, especially on the
-    <a target="_blank" href="{{ site.links.uv }}"
-       title="synyx Urlaubsverwaltung">vacation
-      management tool</a> and on
+    <a target="_blank" href="{{ site.links.uv }}">vacation management tool</a>
+    and on
     <a target="_blank" href="{{ site.links.where2dump }}">where2dump</a>.
     Are you interested in my coding projects?
     <a class="button" target="_blank" href="{{ site.user.github }}">
