--- a/index_de.html
+++ b/index_de.html
@@ -10,6 +10,9 @@ layout: default
     ungew&ouml;hnliche Pseudonym eingebracht.
     Zusammen mit Ehemann und Tochter lebe ich im sch&ouml;nen
     <a target="_blank" href="{{ site.links.location }}">Karlsruhe</a>.
+    <a class="button" href="mailto:{{ site.user.email }}">
+      <i class="fa fa-fw fa-envelope"></i> Schreib mir eine E-Mail
+    </a>
   </p>
 </section>
 
@@ -19,13 +22,12 @@ layout: default
   <p>
     Immer wieder hinterlasse ich Spuren auf GitHub, insbesondere bei der
     Entwicklung eines
-    <a target="_blank" href="{{ site.links.uv }}"
-       title="synyx Urlaubsverwaltung">
-      Urlaubsverwaltung Tools</a> und bei
+    <a target="_blank" href="{{ site.links.uv }}">Urlaubsverwaltung Tools</a>
+    und bei
     <a target="_blank" href="{{ site.links.where2dump }}">where2dump</a>.
     Interessiert an meinen digitalen Projekten?
     <a class="button" target="_blank" href="{{ site.user.github }}">
-      <i class="fa fa-lg fa-fw fa-github-alt"></i> Besuche meine GitHub Seite
+      <i class="fa fa-lg fa-fw fa-github-alt"></i> Geh auf GitHub
     </a>
   </p>
 </section>
