Set German as default language
index_de.html -> index.html
index.html -> index_en.html

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@ layout: default
 ---
 
 <section>
-  <h1 class="center">Hi, I'm Frau Lyoner</h1>
-
+  <h1 class="center">Hi, ich bin Frau Lyoner.</h1>
   <p>
-    This is a pseudonym based on my first name reminding of the sausage
-    "Lyoner". Actually my name is Aljona Buchloh, nee Murygina.
-    Together with my husband and daughter, I live in
-    <a target="_blank" href="{{ site.links.location }}">Karlsruhe, Germany</a>.
+    Eigentlich h&ouml;re ich auf den Namen Aljona Buchloh (geb. Murygina), doch die
+    &Auml;hnlichkeit meines Vornamens zu einer gewissen Wurstsorte hat mir dieses
+    ungew&ouml;hnliche Pseudonym eingebracht.
+    Zusammen mit Ehemann und Tochter lebe ich im sch&ouml;nen
+    <a target="_blank" href="{{ site.links.location }}">Karlsruhe</a>.
     <a class="button" href="mailto:{{ site.user.email }}">
-      <i class="fa fa-fw fa-envelope"></i> Drop me an email
+      <i class="fa fa-fw fa-envelope"></i> Schreib mir eine E-Mail
     </a>
   </p>
 </section>
@@ -20,13 +20,14 @@ layout: default
   <h2>Hacking</h2>
 
   <p>
-    Now and then I leave my mark on GitHub, especially on the
-    <a target="_blank" href="{{ site.links.uv }}">vacation management tool</a>
-    and on
+    Immer wieder hinterlasse ich Spuren auf GitHub, insbesondere bei der
+    Entwicklung eines
+    <a target="_blank" href="{{ site.links.uv }}">Urlaubsverwaltung Tools</a>
+    und bei
     <a target="_blank" href="{{ site.links.where2dump }}">where2dump</a>.
-    Are you interested in my coding projects?
+    Interessiert an meinen digitalen Projekten?
     <a class="button" target="_blank" href="{{ site.user.github }}">
-      <i class="fa fa-lg fa-fw fa-github-alt"></i> Check out my GitHub page
+      <i class="fa fa-lg fa-fw fa-github-alt"></i> Geh auf GitHub
     </a>
   </p>
 </section>
@@ -35,12 +36,12 @@ layout: default
   <h2>Blogging</h2>
 
   <p>
-    On <a target="_blank" href="{{ site.links.blog }}">meinimalismus.de</a>
-    I write about my way to a minimalist life.
-    Do you want to find out more about the subjects minimalism, tidiness and
-    sustainability?
+    Auf <a target="_blank" href="{{ site.links.blog }}">meinimalismus.de</a>
+    blogge ich &uuml;ber meinen ganz pers&ouml;nlichen Weg zu einem minimalistischen Leben.
+    Hier berichte ich von meinen Strategien und Erfahrungen im Kampf gegen
+    Gedankenchaos und Unordnung. Willst du mehr dar&uuml;ber erfahren?
     <a class="button" target="_blank" href="{{ site.links.blog }}">
-      <i class="fa fa-lg fa-fw fa-pencil"></i> Visit my blog
+      <i class="fa fa-lg fa-fw fa-pencil"></i> Besuche meinen Blog
     </a>
   </p>
 </section>
@@ -49,27 +50,27 @@ layout: default
   <h2>Lettering</h2>
 
   <p>
-    Sometimes I leave the digital world and enjoy being creative in an analog
-    way.
-    Since 2015 I'm highly infected with the
-    <a target="_blank"
-       href="{{ site.links.lettering }}">Lettering</a> virus.
-    Are you interested in my non-coding projects?
+    Nicht nur in der digitalen, auch in der analogen Welt bin ich gerne
+    sch&ouml;pferisch unterwegs.
+    Ende 2015 habe ich mich mit dem hochgradig ansteckenden
+    <a target="_blank" href="{{ site.links.lettering }}">Lettering</a>
+    Virus infiziert und bin seither auch auf Instagram zu finden.
+    Interessiert an meinen analogen Projekten?
     <a class="button" target="_blank" href="{{ site.user.instagram }}">
-      <i class="fa fa-lg fa-fw fa-instagram"></i> Follow me on Instagram
+      <i class="fa fa-lg fa-fw fa-instagram"></i> Folge mir auf Instagram
     </a>
   </p>
 </section>
 
 <section>
-  <h2>More?</h2>
+  <h2>Und sonst so?</h2>
 
   <p>
     <a class="button" target="_blank" href="{{ site.user.twitter }}">
-      <i class="fa fa-lg fa-fw fa-twitter"></i> Follow me on Twitter
+      <i class="fa fa-lg fa-fw fa-twitter"></i> Folge mir auf Twitter
     </a>
     <a class="button" href="mailto:{{ site.user.email }}">
-      <i class="fa fa-fw fa-envelope"></i> Drop me an email
+      <i class="fa fa-fw fa-envelope"></i> Schreib mir eine E-Mail
     </a>
   </p>
 </section>
