--- a/impressum.html
+++ b/impressum.html
@@ -4,7 +4,7 @@ layout: default
 
 <h1 class="center">Impressum</h1>
 
-<a class="button" href="index_de.html">
+<a class="button" href="index.html">
   <i class="fa fa-lg fa-fw fa-home"></i> Zur&uuml;ck zur Startseite
 </a>
 
@@ -25,6 +25,6 @@ layout: default
   76135 Karlsruhe
 </p>
 
-<a class="button" href="index_de.html">
+<a class="button" href="index.html">
   <i class="fa fa-lg fa-fw fa-home"></i> Zur&uuml;ck zur Startseite
 </a>
