Add link to Pinterest profile

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@ layout: default
     <a class="button" target="_blank" href="{{ site.user.twitter }}">
       <i class="fa fa-lg fa-fw fa-twitter"></i> Folge mir auf Twitter
     </a>
+    <a class="button" target="_blank" href="{{ site.user.pinterest }}">
+      <i class="fa fa-lg fa-fw fa-pinterest"></i> Folge mir auf Pinterest
+    </a>
     <a class="button" href="mailto:{{ site.user.email }}">
       <i class="fa fa-fw fa-envelope"></i> Schreib mir eine E-Mail
     </a>
