--- a/index_en.html
+++ b/index_en.html
@@ -68,6 +68,9 @@ layout: default
     <a class="button" target="_blank" href="{{ site.user.twitter }}">
       <i class="fa fa-lg fa-fw fa-twitter"></i> Follow me on Twitter
     </a>
+    <a class="button" target="_blank" href="{{ site.user.pinterest }}">
+      <i class="fa fa-lg fa-fw fa-pinterest"></i> Follow me on Pinterest
+    </a>
     <a class="button" href="mailto:{{ site.user.email }}">
       <i class="fa fa-fw fa-envelope"></i> Drop me an email
     </a>
