Change icon for blog link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: default
     Hier berichte ich von meinen Strategien und Erfahrungen im Kampf gegen
     Gedankenchaos und Unordnung. Willst du mehr dar&uuml;ber erfahren?
     <a class="button" target="_blank" href="{{ site.links.blog }}">
-      <i class="fa fa-lg fa-fw fa-pencil"></i> Besuche meinen Blog
+      <i class="fa fa-lg fa-fw fa-edit"></i> Besuche meinen Blog
     </a>
   </p>
 </section>
