--- a/index_en.html
+++ b/index_en.html
@@ -40,7 +40,7 @@ layout: default
     Do you want to find out more about the subjects minimalism, tidiness and
     sustainability?
     <a class="button" target="_blank" href="{{ site.links.blog }}">
-      <i class="fa fa-lg fa-fw fa-pencil"></i> Visit my blog
+      <i class="fa fa-lg fa-fw fa-edit"></i> Visit my blog
     </a>
   </p>
 </section>
