Change order of sections, shorten hacking section

--- a/index.html
+++ b/index.html
@@ -17,22 +17,6 @@ layout: default
 </section>
 
 <section>
-  <h2>Hacking</h2>
-
-  <p>
-    Immer wieder hinterlasse ich Spuren auf GitHub, insbesondere bei der
-    Entwicklung eines
-    <a target="_blank" href="{{ site.links.uv }}">Urlaubsverwaltung Tools</a>
-    und bei
-    <a target="_blank" href="{{ site.links.where2dump }}">where2dump</a>.
-    Interessiert an meinen digitalen Projekten?
-    <a class="button" target="_blank" href="{{ site.user.github }}">
-      <i class="fa fa-lg fa-fw fa-github-alt"></i> Geh auf GitHub
-    </a>
-  </p>
-</section>
-
-<section>
   <h2>Blogging</h2>
 
   <p>
@@ -58,6 +42,20 @@ layout: default
     Interessiert an meinen analogen Projekten?
     <a class="button" target="_blank" href="{{ site.user.instagram }}">
       <i class="fa fa-lg fa-fw fa-instagram"></i> Folge mir auf Instagram
+    </a>
+  </p>
+</section>
+
+<section>
+  <h2>Hacking</h2>
+
+  <p>
+    Immer wieder hinterlasse ich Spuren auf GitHub, insbesondere bei der
+    Entwicklung eines
+    <a target="_blank" href="{{ site.links.uv }}">Urlaubsverwaltung Tools</a>.
+    Interessiert an meinen digitalen Projekten?
+    <a class="button" target="_blank" href="{{ site.user.github }}">
+      <i class="fa fa-lg fa-fw fa-github-alt"></i> Geh auf GitHub
     </a>
   </p>
 </section>
