--- a/index_en.html
+++ b/index_en.html
@@ -17,21 +17,6 @@ layout: default
 </section>
 
 <section>
-  <h2>Hacking</h2>
-
-  <p>
-    Now and then I leave my mark on GitHub, especially on the
-    <a target="_blank" href="{{ site.links.uv }}">vacation management tool</a>
-    and on
-    <a target="_blank" href="{{ site.links.where2dump }}">where2dump</a>.
-    Are you interested in my coding projects?
-    <a class="button" target="_blank" href="{{ site.user.github }}">
-      <i class="fa fa-lg fa-fw fa-github-alt"></i> Check out my GitHub page
-    </a>
-  </p>
-</section>
-
-<section>
   <h2>Blogging</h2>
 
   <p>
@@ -57,6 +42,19 @@ layout: default
     Are you interested in my non-coding projects?
     <a class="button" target="_blank" href="{{ site.user.instagram }}">
       <i class="fa fa-lg fa-fw fa-instagram"></i> Follow me on Instagram
+    </a>
+  </p>
+</section>
+
+<section>
+  <h2>Hacking</h2>
+
+  <p>
+    Now and then I leave my mark on GitHub, especially on a
+    <a target="_blank" href="{{ site.links.uv }}">vacation management tool</a>.
+    Are you interested in my coding projects?
+    <a class="button" target="_blank" href="{{ site.user.github }}">
+      <i class="fa fa-lg fa-fw fa-github-alt"></i> Check out my GitHub page
     </a>
   </p>
 </section>
