Add section about agile blog

--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@ layout: default
 </section>
 
 <section>
+  <h2>Agiling</h2>
+
+  <p>
+    Da ich seit Anfang des Jahres als Agile Coach in Ausbildung t&auml;tig bin,
+    halte ich meine Erfahrungen und Lessons Learned in einer Art Logbuch fest.
+    Willst du mehr dar&uuml;ber erfahren?
+    <a class="button" target="_blank" href="{{ site.links.agile }}">
+      <i class="fa fa-lg fa-fw fa-book"></i> Besuche mein Logbuch
+    </a>
+  </p>
+</section>
+
+<section>
   <h2>Hacking</h2>
 
   <p>
