--- a/index_en.html
+++ b/index_en.html
@@ -47,6 +47,19 @@ layout: default
 </section>
 
 <section>
+  <h2>Agiling</h2>
+
+  <p>
+    Since the beginning of the year I work as a Junior Agile Coach.
+    I record my experiences and lessons learned in a kind of log book.
+    Do you want to find out more?
+    <a class="button" target="_blank" href="{{ site.links.agile }}">
+      <i class="fa fa-lg fa-fw fa-book"></i> Visit my log book
+    </a>
+  </p>
+</section>
+
+<section>
   <h2>Hacking</h2>
 
   <p>
