--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <section>
   <h1 class="center">Hi, ich bin Frau Lyoner.</h1>
   <p>
-    Eigentlich h&ouml;re ich auf den Namen Aljona Buchloh (geb. Murygina), doch die
+    Eigentlich h&ouml;re ich auf den Namen Aljona, doch die
     &Auml;hnlichkeit meines Vornamens zu einer gewissen Wurstsorte hat mir dieses
     ungew&ouml;hnliche Pseudonym eingebracht.
     <a class="button" href="mailto:{{ site.user.email }}">
