--- a/index_en.html
+++ b/index_en.html
@@ -7,7 +7,7 @@ layout: default
 
   <p>
     This is a pseudonym based on my first name reminding of the sausage
-    "Lyoner". Actually my name is Aljona Buchloh, nee Murygina.
+    "Lyoner". Actually my name is Aljona.
     <a class="button" href="mailto:{{ site.user.email }}">
       <i class="fa fa-fw fa-envelope"></i> Drop me an email
     </a>
