--- a/index_en.html
+++ b/index_en.html
@@ -80,6 +80,9 @@ layout: default
     <a class="button" target="_blank" href="{{ site.user.pinterest }}">
       <i class="fa fa-lg fa-fw fa-pinterest"></i> Follow me on Pinterest
     </a>
+    <a class="button" target="_blank" href="{{ site.user.xing }}">
+      <i class="fa fa-lg fa-fw fa-xing"></i> Contact me on Xing
+    </a>
     <a class="button" href="mailto:{{ site.user.email }}">
       <i class="fa fa-fw fa-envelope"></i> Drop me an email
     </a>
