--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@ layout: default
 <section>
   <h1 class="center">Hi, ich bin Frau Lyoner.</h1>
   <p>
-    Eigentlich h&ouml;re ich auf den Namen Aljona, doch die
-    &Auml;hnlichkeit meines Vornamens zu einer gewissen Wurstsorte hat mir dieses
-    ungew&ouml;hnliche Pseudonym eingebracht.
+    Eigentlich h&ouml;re ich auf den Namen Aljona, doch die &Auml;hnlichkeit
+    meines Vornamens zu einer gewissen Wurstsorte hat mir dieses eher
+    ungew&ouml;hnliche Pseudonym eingebracht. Zusammen mit Ehemann und Tochter
+    lebe ich im sch&ouml;nen
+    <a target="_blank" href="{{ site.links.location}}">Karlsruhe</a>.
     <a class="button" href="mailto:{{ site.user.email }}">
       <i class="fa fa-fw fa-envelope"></i> Schreib mir eine E-Mail
     </a>
@@ -19,9 +21,10 @@ layout: default
 
   <p>
     Auf <a target="_blank" href="{{ site.links.blog }}">meinimalismus.de</a>
-    blogge ich &uuml;ber meinen ganz pers&ouml;nlichen Weg zu einem minimalistischen Leben.
-    Hier berichte ich von meinen Strategien und Erfahrungen im Kampf gegen
-    Gedankenchaos und Unordnung. Willst du mehr dar&uuml;ber erfahren?
+    setze ich mich mit dem vielf&auml;ltigen Thema Minimalismus auseinander. Ob
+    Reduzierung von Gedankenchaos, Unordnung oder Abfall, ich schreibe &uuml;ber
+    allerlei Strategien, um unn&ouml;tigen Ballast loszulassen und das innere
+    und &auml;ußere Chaos zu b&auml;ndigen.
     <a class="button" target="_blank" href="{{ site.links.blog }}">
       <i class="fa fa-lg fa-fw fa-edit"></i> Besuche meinen Blog
     </a>
@@ -32,12 +35,10 @@ layout: default
   <h2>Lettering</h2>
 
   <p>
-    Nicht nur in der digitalen, auch in der analogen Welt bin ich gerne
-    sch&ouml;pferisch unterwegs.
     Ende 2015 habe ich mich mit dem hochgradig ansteckenden
     <a target="_blank" href="{{ site.links.lettering }}">Lettering</a>
-    Virus infiziert und bin seither auch auf Instagram zu finden.
-    Interessiert an meinen analogen Projekten?
+    Virus infiziert. Seither ist meine Buchstabenmalerei auch auf
+    Instagram zu finden.
     <a class="button" target="_blank" href="{{ site.user.instagram }}">
       <i class="fa fa-lg fa-fw fa-instagram"></i> Folge mir auf Instagram
     </a>
@@ -48,9 +49,8 @@ layout: default
   <h2>Agiling</h2>
 
   <p>
-    Da ich seit Anfang des Jahres als Agile Coach in Ausbildung t&auml;tig bin,
+    Da ich seit Februar 2019 als Scrum Master / Prozessbegleiter t&auml;tig bin,
     halte ich meine Erfahrungen und Lessons Learned in einer Art Logbuch fest.
-    Willst du mehr dar&uuml;ber erfahren?
     <a class="button" target="_blank" href="{{ site.links.agile }}">
       <i class="fa fa-lg fa-fw fa-book"></i> Besuche mein Logbuch
     </a>
@@ -64,7 +64,6 @@ layout: default
     Immer wieder hinterlasse ich Spuren auf GitHub, insbesondere bei der
     Entwicklung eines
     <a target="_blank" href="{{ site.links.uv }}">Urlaubsverwaltung Tools</a>.
-    Interessiert an meinen digitalen Projekten?
     <a class="button" target="_blank" href="{{ site.user.github }}">
       <i class="fa fa-lg fa-fw fa-github-alt"></i> Geh auf GitHub
     </a>
