--- a/index_en.html
+++ b/index_en.html
@@ -6,8 +6,9 @@ layout: default
   <h1 class="center">Hi, I'm Frau Lyoner</h1>
 
   <p>
-    This is a pseudonym based on my first name reminding of the sausage
-    "Lyoner". Actually my name is Aljona.
+    This pseudonym is based on my first name reminding of the sausage "Lyoner".
+    Actually my name is Aljona. Together with my husband and daughter, I live in
+    <a target="_blank" href="{{ site.links.location }}">Karlsruhe, Germany</a>.
     <a class="button" href="mailto:{{ site.user.email }}">
       <i class="fa fa-fw fa-envelope"></i> Drop me an email
     </a>
@@ -19,9 +20,8 @@ layout: default
 
   <p>
     On <a target="_blank" href="{{ site.links.blog }}">meinimalismus.de</a>
-    I write about my way to a minimalist life.
-    Do you want to find out more about the subjects minimalism, tidiness and
-    sustainability?
+    I write about my way to a minimalist life. Learn more about minimalism,
+    tidiness and sustainability in my blog posts.
     <a class="button" target="_blank" href="{{ site.links.blog }}">
       <i class="fa fa-lg fa-fw fa-edit"></i> Visit my blog
     </a>
@@ -32,12 +32,9 @@ layout: default
   <h2>Lettering</h2>
 
   <p>
-    Sometimes I leave the digital world and enjoy being creative in an analog
-    way.
     Since 2015 I'm highly infected with the
-    <a target="_blank"
-       href="{{ site.links.lettering }}">Lettering</a> virus.
-    Are you interested in my non-coding projects?
+    <a target="_blank" href="{{ site.links.lettering }}">lettering</a> virus.
+    You can find my handlettering projects on Instagram.
     <a class="button" target="_blank" href="{{ site.user.instagram }}">
       <i class="fa fa-lg fa-fw fa-instagram"></i> Follow me on Instagram
     </a>
@@ -48,9 +45,8 @@ layout: default
   <h2>Agiling</h2>
 
   <p>
-    Since the beginning of the year I work as a Junior Agile Coach.
-    I record my experiences and lessons learned in a kind of log book.
-    Do you want to find out more?
+    Since February 2019 I work as a Scrum Master. I record my experiences and
+    lessons learned in a kind of log book.
     <a class="button" target="_blank" href="{{ site.links.agile }}">
       <i class="fa fa-lg fa-fw fa-book"></i> Visit my log book
     </a>
@@ -63,7 +59,6 @@ layout: default
   <p>
     Now and then I leave my mark on GitHub, especially on a
     <a target="_blank" href="{{ site.links.uv }}">vacation management tool</a>.
-    Are you interested in my coding projects?
     <a class="button" target="_blank" href="{{ site.user.github }}">
       <i class="fa fa-lg fa-fw fa-github-alt"></i> Check out my GitHub page
     </a>
